# textalytics-cloud-api-adapters

./: README.md  pyproject.toml
tests/: aws_sample_response.json  azure_sample_response.txt  gcp_sample_response.txt  test_aws_entity_recognition.py  test_azure_entity_recognition.py  test_gcp_entity_recognition.py  test_textalytics_entity_recognition.py
textalytics_gcp/: gcp_entity_recognition.py
