[tool.poetry]
name = "textalytics-cloud-api-adapters"
version = "0.1.0"
description = "textalytics adapters for various cloud apis"
authors = ["Manoj Bharadwaj <manoj@cloudcosmos.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
textalytics-core = "^0.1.0"
google-cloud-language = "^2.2.2"
boto3 = "^1.18.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = "./venv"

[tool.poetry.scripts]
test = 'scripts:test'

